manual recursively check argument is unnecessary